Documentation edits made through Mintlify web editor

--- a/api-reference.mdx
+++ b/api-reference.mdx
@@ -1,24 +1,3 @@
 ---
-title: 'API Reference'
+openapi: openapi.json
 ---
-
-<Note>
-  Our API documentation is automatically generated from our OpenAPI specification.
-</Note>
-
-## Authentication
-
-All API requests require authentication using Bearer tokens.
-```bash
-curl https://api.coinscrap.com/endpoint \
-  -H "Authorization: Bearer YOUR_TOKEN"
-```
-
-## Base URL
-```
-https://api.coinscrap.com
-```
-
-## Endpoints
-
-Use the sidebar navigation to explore all available endpoints organized by category.
